--- a/src/XIVLauncher.Common.Unix/XIVLauncher.Common.Unix.csproj
+++ b/src/XIVLauncher.Common.Unix/XIVLauncher.Common.Unix.csproj
@@ -31,8 +31,5 @@
         <PathMap>$(AppOutputBase)=C:\goatsoft\xl\XIVLauncher.Common.Unix\</PathMap>
     </PropertyGroup>
 
-    <ItemGroup>
-        <!-- Custom steamworks, based on the chippy branch of Facepunch.Steamworks -->
-        <PackageReference Include="goaaats.Steamworks" Version="2.3.4" />
-    </ItemGroup>
+    <!-- Steam integration removed for Taiwan version -->
 </Project>
