--- a/src/XIVLauncher.Core/XIVLauncher.Core.csproj
+++ b/src/XIVLauncher.Core/XIVLauncher.Core.csproj
@@ -9,7 +9,9 @@
         <LangVersion>latest</LangVersion>
         <ApplicationIcon>Resources\dalamud_icon.ico</ApplicationIcon>
 
-        <Version>1.3.1</Version>
+        <Product>XIVTCLauncher.Core</Product>
+        <AssemblyTitle>XIVTCLauncher.Core</AssemblyTitle>
+        <Version>1.0.0</Version>
         <FileVersion>$(Version)</FileVersion>
         <AssemblyVersion>$(Version)</AssemblyVersion>
 
